# rust-for-dreamcast

./: .gitignore  README.md
examples/: Cargo.toml
examples/addlib/: Cargo.toml
examples/addlib/src/: lib.rs
examples/atomics/: Cargo.toml
examples/atomics/src/: main.rs
examples/cargo-addlib/: Cargo.toml
examples/cargo-cube/: Cargo.toml  build.rs
examples/cargo-cube/.cargo/: config
examples/cargo-cube/src/: main.rs
examples/cargo-hello/: Cargo.toml
examples/cargo-hello/src/: main.rs
examples/filesystem-io/: Cargo.toml
examples/filesystem-io/src/: main.rs
examples/gldc-cube/: .gitignore  Cargo.toml  build.rs
examples/gldc-cube/src/: main.rs
examples/hello-cargo/: Cargo.toml
examples/hello-cargo/src/: main.rs
examples/hello-make/: Makefile  hello_c.c
examples/http/: Cargo.toml
examples/http/src/: main.rs
examples/network-time/: Cargo.toml
examples/network-time/src/: main.rs
examples/no_std/addlib/: Cargo.toml
examples/no_std/gldc-cube/: Cargo.toml
examples/no_std/hello-cargo/: Cargo.toml
examples/pvr/pvrmark_strips_direct/: Cargo.toml
examples/pvr_strips_direct/: Cargo.toml
examples/pvr_strips_direct/src/: main.rs
examples/romdisk/: Cargo.toml  build.rs
examples/romdisk/romdisk/: text.txt
examples/romdisk/src/: main.rs
examples/rustc-hello/: Makefile  hello_rust.rs
examples/sfx/: Cargo.toml
examples/std/atomics/: Cargo.toml
examples/std/filesystem-io/: Cargo.toml
examples/std/network-time/: Cargo.toml
examples/std/threads/: Cargo.toml
examples/std/tokio-async/: Cargo.toml
examples/threads/: Cargo.toml
examples/threads/src/: main.rs
examples/tokio-async/: Cargo.toml
examples/tokio-async/src/: main.rs
(+30 files in other folders)
