[package]
name = "pvr_strips_direct"
version = "0.1.0"
edition = "2021"

[dependencies]
kos = { package = "kos-rs", git = "https://github.com/dreamcast-rs/kos-rs" }
libc = { path = "/opt/toolchains/dc/rust/libc" }

[patch.crates-io]
libc = { path = "/opt/toolchains/dc/rust/libc" }

[profile.release]
opt-level = 3
